# Memory

./: .replit  AUDIT_REPORT_2025.md  BETA_LAUNCH_PLAN.md  Dockerfile  FINAL_AUDIT_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FRONTEND_IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REVIEW_REPORT.md  ONCALL_PLAYBOOK.md  PRODUCTION_CHECKLIST.md  SYNC_GUIDE.md  auto-sync.bat  auto-sync.ps1  docker-compose.yml  docker-deploy.sh  package-lock.json  package.json  replit.md  requirements.txt  setup-auto-sync.md
Memory/: .coverage  .env.example  .env.template  .gitignore  ACHIEVEMENT_MCP_INTEGRATION.md  AZURE_SETUP.md  CIRCLEBACK_ANALYSIS_BACKUP.md  CIRCLEBACK_ANALYSIS_COMPLETE.md  CIRCLEBACK_COMPLETE_ANALYSIS.md  CIRCLEBACK_DEEP_ANALYSIS.md  CLAUDE_SETUP.md  CURSOR_REPLIT_SYNC.md  DEPLOYMENT.md  ELEVENLABS_MCP_MANUAL_SETUP.md  ELEVENLABS_MCP_SETUP_GUIDE.md  ENHANCED_AGENT_PROMPT.md  ENV  GET_AZURE_KEY.md  MEMO_COMPANION_PROMPT.md  MERGE_STRATEGY_REPLIT.md  ONCALL_PLAYBOOK.md  PRODUCTION_READINESS_REVIEW_GPT5.md  README.md  RELEASE_CHECKLIST.md  REPLIT_CLAUDE_SETUP.md  REPLIT_CURSOR_SYNC_GUIDE.md  REPLIT_TESTING_GUIDE.md  SYSTEM_COMPLETE_SUMMARY.md  VOICE_CLONING_SOLUTION.md  WHATSAPP_SETUP.md  add_azure_key.py  add_claude_key.bat  add_claude_key.ps1  add_whatsapp.py  circleback_analysis.json  circleback_content_circleback.ai.md  circleback_content_features.md  circleback_content_how-it-works.md  circleback_content_integrations.md  circleback_content_pricing.md  (+45 more)
Memory/Memory-App/: PROJECT-OVERVIEW.md  package-lock.json  tsconfig.json
app/: branding.py  (+8 more)
(+615 files in other folders)
