[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.67.0",
    "apscheduler>=3.11.0",
    "colorama>=0.4.6",
    "cryptography>=45.0.7",
    "flask[async]>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "openai>=1.107.1",
    "psutil>=7.0.0",
    "pyjwt>=2.10.1",
    "python-socketio>=5.13.0",
    "stripe>=12.5.1",
    "supabase>=2.18.1",
    "twilio>=9.8.0",
    "asgiref>=3.9.1",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "bcrypt>=4.3.0",
    "schedule>=1.2.2",
    "flask-sqlalchemy>=3.1.1",
    "scikit-learn>=1.7.2",
    "numpy>=2.3.3",
    "langdetect>=1.0.9",
    "pytesseract>=0.3.13",
    "pandas>=2.3.2",
    "networkx>=3.5",
    "textblob>=0.19.0",
    "pillow>=11.3.0",
    "speechrecognition>=3.14.3",
    "pydub>=0.25.1",
    "azure-cognitiveservices-speech>=1.46.0",
    "soundfile>=0.13.1",
]
